tests/ui/associated-type-bounds/implied-predicates.stderr
error[E0277]: the trait bound `<B as Super>::SuperAssoc: implied_predicates::Bound` is not satisfied
  --> $DIR/implied-predicates.rs:6:11
   |
LL | fn bar<B: Bar>() {}
   |           ^^^ the trait `implied_predicates::Bound` is not implemented for `<B as Super>::SuperAssoc`
   |
note: required by a bound in `Bar`
  --> $DIR/auxiliary/implied-predicates.rs:1:34
   |
LL | pub trait Bar: Super<SuperAssoc: Bound> {}
   |                                  ^^^^^ required by this bound in `Bar`
help: consider further restricting the associated type
   |
LL | fn bar<B: Bar>() where <B as Super>::SuperAssoc: implied_predicates::Bound {}
   |                  +++++++++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
